kubernetes/clusters/lapi/applications/jellyfin/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.11
          securityContext:
            privileged: true
          ports:
            - containerPort: 8096
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: media
              mountPath: /media
              readOnly: true
            - name: dri
              mountPath: /dev/dri
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
            limits:
              memory: "24Gi"
              cpu: "8000m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: cache
          emptyDir: {}
        - name: media
          hostPath:
            path: /mlem/media
        - name: network-config
          configMap:
            name: jellyfin-network-config
        - name: dri
          hostPath:
            path: /dev/dri
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  type: ClusterIP
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: http
  selector:
    app: jellyfin
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyfin-policy
spec:
  podSelector:
    matchLabels:
      app: jellyfin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: caddy
        - podSelector:
            matchLabels:
              app: home-assistant
      ports:
        - protocol: TCP
          port: 8096
    - from:
        - podSelector:
            matchLabels:
              app: cloudflared
        - podSelector:
            matchLabels:
              app: seerr
      ports:
        - protocol: TCP
          port: 8096
